moved auth/register to /users
