# src/models/request.model.js
@@ -1,10 +1,22 @@
-const createUserReqModel = (tenantUid, username, email, passwordHash, role) => {
+const createUserReqModel = (
+  tenantUid,
+  username,
+  email,
+  passwordHash,
+  role,
+  firstName,
+  lastName,
+  mobile
+) => {
   return {
     tenant_uid: tenantUid,
     username,
     email,
     password_hash: passwordHash,
     role,
+    first_name: firstName,
+    last_name: lastName,
+    mobile,
   };
 };
 
